      double-escaping problems (see: #695224)
  * Provide a more modern description of Perl in the long description
    of the perl package (Closes: #678307)
  * New upstream release
    - update Breaks versions in debian/control for dual-lived modules

  [ Niko Tyni ]
  * Update debian/copyright for 5.17.11.
  * Fix a few false positive format-security warnings from gcc.

 -- Niko Tyni <ntyni@debian.org>  Sat, 23 Mar 2013 18:34:59 +0200

perl (5.16.3-1) experimental; urgency=low

  * Remove Depends/Recommends/Suggests on modules deprecated in 5.12 and
    5.14 (Closes: #702094)
  * Fix FTBFS with findutils from experimental by not using deprecated
    permissions check syntax; thanks to Roland Stigge (Closes: #702562)
  * Merge 5.14.2-17, 5.14.2-18, 5.14.2-19 and 5.14.2-20 from unstable
    + Fix a double-free bug in Digest::SHA. (Closes: #698174)
      + update the Breaks: entry accordingly.
    + Avoid wraparound when casting unsigned size_t to signed ssize_t.
      (Closes: #698320)
    + [SECURITY] CVE-2013-1667: fix a rehashing DoS opportunity
      against code that uses arbitrary user input as hash keys.
      (Closes: #702296)
    + Fix an Encode memory leak that occurred in the UTF-8 encoding.
      (Closes: #702416)
      + upgrade the Broken versions of the separate libencode-perl
        package accordingly.
  * Update debian/t/control.t to reflect Module::CoreList version
    inconsistency and to remove references to non-existent Breaks
  * Remove unneeded versioned dependencies on gcc and cpio
    (Closes: #678138)
  * Fix debian/copyright syntax (thanks, Lintian)
  * Include correct branch name in Vcs-Git field
  * New upstream release

 -- Dominic Hargreaves <dom@earth.li>  Tue, 12 Mar 2013 23:08:47 +0000

perl (5.16.2-2) experimental; urgency=low

  [ Dominic Hargreaves ]
  * Merge 5.14.2-15 and 5.14.2-16 from unstable
    + [SECURITY] CVE-2012-5526: CGI.pm improper cookie and p3p
      CRLF escaping (Closes: #693420)