@@ -16,6 +16,8 @@ perl (5.17.11-1) UNRELEASED; urgency=low
   [ Niko Tyni ]
   * Update debian/copyright for 5.17.11.
   * Fix a few false positive format-security warnings from gcc.
+  * Use the DESTDIR mechanism for installation instead of mangling the
+    install paths before and after.
 
  -- Niko Tyni <ntyni@debian.org>  Sat, 23 Mar 2013 18:34:59 +0200
 
